--- a/public/catalog/view/javascript/jquery/owl-carousel/owl.carousel.css
+++ b/public/catalog/view/javascript/jquery/owl-carousel/owl.carousel.css
@@ -110,7 +110,7 @@
 }
 .owl-carousel .owl-buttons .owl-prev:hover,
 .owl-carousel .owl-buttons .owl-next:hover {
-	color: #1571d6;
+	color: #e4b969;
 }
 .owl-carousel .owl-buttons .owl-prev {
 	left: -50px;  
