--- a/public/catalog/view/javascript/tmnewsletterpopup/tm_newsletter-popup.css
+++ b/public/catalog/view/javascript/tmnewsletterpopup/tm_newsletter-popup.css
@@ -115,7 +115,7 @@
   line-height: 23px;
 }
 .newsletter-popup-close-btn:hover {
-  color: #1571d6;
+  color: #e4b969;
 }
 .newsletter-popup-btn {
   margin-top: 0;
