--- a/public/catalog/view/theme/theme586/stylesheet/stylesheet.css
+++ b/public/catalog/view/theme/theme586/stylesheet/stylesheet.css
@@ -611,6 +611,8 @@ body[class*="information-"] .header .nav-list, body[class="account-return-add"] 
   display: none;
 }
 .header address {
+  /* *** WEBCA *** */
+  display: none;
   padding-left: 33px;
   font-size: 24px;
   line-height: 24px;
